feat: 扩写10篇核心文档（基础知识/云原生/源码/场景/架构/安全）
P0 核心扩写（3篇）：
- Go语言体系（166→500+行）：Go Modules/错误处理/泛型/反射/pprof/GC调优/并发模式
- JVM调优实战（182→500+行）：G1/ZGC/Shenandoah调优/JFR分析/Arthas深入/OOM全场景/虚拟线程
- Trino联邦查询引擎（94→300+行）：Connector SPI/调度模型/性能调优/Iceberg集成/生产部署

P1 重要扩写（4篇）：
- ServiceMesh（129→400+行）：Istio详细配置/Ambient Mesh/Wasm扩展/性能benchmark/生产运维
- SpringCloud源码（142→400+行）：Nacos Client源码/Gateway Filter链/OpenFeign调用链/Sentinel滑动窗口
- 订单系统设计（123→400+行）：状态机详细设计/分库分表策略/订单号生成/超时方案/售后退款
- 单体到微服务演进（174→400+行）：模块化单体/绞杀者落地细节/数据库拆分/无状态化改造

P2 价值扩写（3篇）：
- GitOps（133→300+行）：ArgoCD vs FluxCD对比/多集群/Secret管理/渐进交付
- 权限系统设计（127→300+行）：RBAC深入/数据权限/位图加速/审计日志/缓存刷新
- 零信任架构（114→300+行）：BeyondCorp/微分段/身份感知代理/五阶段落地路径

总计新增约3000行，进一步夯实知识库深度